Support for jdk17-eap7 testing